--- a/index.html
+++ b/index.html
@@ -6,17 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
     <title>QMS</title>
-
-    <!--Template based on URL below-->
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/starter-template/">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <!-- Place your stylesheet here-->
-    <link href="/css/stylesheet.css" rel="stylesheet" type="text/css">
 
     <style>
         .card-header {
@@ -96,7 +89,7 @@
     <main role="main" class="container-fluid">
         <div class="row margin-bottom">
             <div class="col-md-12 text-center">
-                <h1><img src="images/tgh-logo.png" width="100px"> Talavera General Hospital</h1>
+                <h1><img src="tgh-logo.png" width="100px"> Talavera General Hospital</h1>
             </div>
         </div>
         <div class="row">
